2008-08-05  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Database/CodeCompletionDatabase.cs: fixed
	  bug in sql statement.

2008-08-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/AbstractParser.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/IParser.cs,
	  MonoDevelop.Projects.Dom/DomCecilType.cs,
	  MonoDevelop.Projects.Dom.Database/DatabaseType.cs,
	  MonoDevelop.Projects.Dom.Database/CodeCompletionDatabase.cs: Worked
	  on dom/code completion db/parser and fixed a bug in the dom cecil
	  type loading.

2008-08-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/DomReturnType.cs,
	  MonoDevelop.Projects.Dom/IReturnType.cs: Worked on C#3 code
	  completion.

2008-08-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomReturnType.cs: fixed fullname bug in
	  return type.

2008-08-01  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom/DomCecilMethod.cs,
	  MonoDevelop.Projects.Dom/DomReturnType.cs,
	  MonoDevelop.Projects.Dom/DomCecilType.cs,
	  MonoDevelop.Projects.Dom/IReturnType.cs,
	  MonoDevelop.Projects.Dom.Database/DatabaseType.cs,
	  MonoDevelop.Projects.Dom.Database/CodeCompletionDatabase.cs:
	  Changed return type representation (now it's possible to represent
	  types of the form A.B.C<GenArg>.Inner1<a1,...>,...,InnerN<aN,...>)

2008-08-01  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/DatabaseProjectDom.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom.Database/DatabaseType.cs,
	  MonoDevelop.Projects.Dom.Database/CodeCompletionDatabase.cs: Added
	  getsubclasslist operation.

2008-08-01  Mike Krüger <mkrueger@novell.com> 
